Refactor build scripts and environment configurations for improved clarity and maintainability
- Streamlined build scripts in package.json across multiple applications to enhance deployment processes and environment handling.
- Updated turbo.json files to improve task dependencies and caching settings, ensuring better build performance.
- Added production build scripts and adjusted environment variable handling in various packages, including web, queue, and database.
- Enhanced configuration management by including necessary environment variables in .env.example files and ensuring consistency across applications.

These changes contribute to a more organized and maintainable codebase, enhancing both development efficiency and clarity in configuration management.

--- a/apps/queue/package.json
+++ b/apps/queue/package.json
@@ -7,6 +7,8 @@
         "dev": "NODE_OPTIONS='--max-old-space-size=4096' tsx watch src/server.ts",
         "build": "NODE_OPTIONS='--max-old-space-size=4096' tsup",
         "start": "node --expose-gc dist/server.js",
+        "build:prod": "tsup",
+        "start:prod": "node dist/server.js",
         "dev:debug": "NODE_OPTIONS='--max-old-space-size=4096 --inspect' tsx watch --inspect src/server.ts",
         "lint": "eslint \"src/**/*.ts\"",
         "clean": "rimraf .turbo node_modules dist .tsbuildinfo",
