--- a/package.json
+++ b/package.json
@@ -3,20 +3,11 @@
     "private": true,
     "packageManager": "npm@10.0.0",
     "scripts": {
-        "dev": "APP_ENV=development turbo run dev",
-        "dev:staging": "APP_ENV=staging turbo run dev",
-        "dev:prod": "APP_ENV=production turbo run dev",
-        "build:dev": "turbo run build --filter=@coldjot/database && turbo run db:deploy --filter=@coldjot/database",
-        "build:staging": "turbo run build --filter=@coldjot/database && turbo run db:deploy:staging --filter=@coldjot/database",
-        "build:prod": "turbo run build --filter=@coldjot/database && turbo run db:deploy:prod --filter=@coldjot/database",
-        "start:dev": "APP_ENV=development turbo run start",
-        "start:staging": "APP_ENV=staging turbo run start",
-        "start:prod": "APP_ENV=production turbo run start",
-        "lint": "turbo run lint",
-        "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-        "clean": "turbo run clean && rm -rf node_modules",
-        "debug:env": "APP_ENV=development turbo run dev --dry=json",
-        "check:env": "APP_ENV=development node -e \"console.log(process.env)\"",
+        "dev": "turbo run dev",
+        "build": "turbo run build:development && turbo run db:deploy --filter=@coldjot/database",
+        "start": "turbo run start:dev",
+        "build:prod": "turbo run build:prod && turbo run db:deploy:prod --filter=@coldjot/database",
+        "start:prod": "turbo run start:prod",
         "redis:up": "docker-compose up -d redis",
         "redis:down": "docker-compose down",
         "redis:logs": "docker-compose logs -f redis",
@@ -29,7 +20,12 @@
         "db:reset": "cd packages/database && dotenv -e .env -- npx prisma migrate reset,--force",
         "services:up": "docker-compose up -d",
         "services:down": "docker-compose down",
-        "dev:with-services": "npm run services:up && npm run dev"
+        "dev:with-services": "npm run services:up && npm run dev",
+        "debug:env": "APP_ENV=development turbo run dev --dry=json",
+        "check:env": "APP_ENV=development node -e \"console.log(process.env)\"",
+        "lint": "turbo run lint",
+        "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+        "clean": "turbo run clean && rm -rf node_modules"
     },
     "engines": {
         "node": ">=20"
