--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -20,6 +20,7 @@
     "scripts": {
         "dev": "tsup src/index.ts --format esm,cjs --dts --watch",
         "build": "tsup src/index.ts --format esm,cjs --dts",
+        "build:prod": "tsup src/index.ts --format esm,cjs --dts",
         "lint": "eslint \"src/**/*.ts*\"",
         "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist",
         "type-check": "tsc --noEmit"
