--- a/apps/web/env/.env.example
+++ b/apps/web/env/.env.example
@@ -19,6 +19,7 @@ GOOGLE_REDIRECT_URI=
 # NextAuth
 NEXTAUTH_URL=http://localhost:3000
 NEXT_PUBLIC_APP_URL=http://localhost:3000
+NEXT_PUBLIC_APP_ENV=development
 AUTH_TRUST_HOST=true
 QUEUE_API_URL="http://localhost:3001/api"
 
