--- a/packages/database/turbo.json
+++ b/packages/database/turbo.json
@@ -14,6 +14,14 @@
                 "DATABASE_URL"
             ]
         },
+        "build:prod": {
+            "dependsOn": [
+                "^build:prod"
+            ],
+            "env": [
+                "DATABASE_URL"
+            ]
+        },
         "db:generate": {
             "cache": false
         },
