Refactor environment variable handling and configuration updates
- Replaced instances of TRACK_URL with TRACK_API_URL across multiple configuration files to standardize API URL usage.
- Updated turbo.json files to enhance environment variable management for various tasks, ensuring consistency in the queue and web applications.
- Modified .env.example files to reflect new environment variable names and improved organization of configuration settings.
- Cleaned up unused environment variables and streamlined the configuration for better clarity and maintainability.

These changes contribute to a more organized and maintainable codebase, enhancing clarity in configuration management and API route handling.

--- a/apps/queue/env/.env.example
+++ b/apps/queue/env/.env.example
@@ -1,28 +1,27 @@
 # General Configuration
-LOG_LEVEL=debug          # Options: debug, info, warn, error
-NODE_ENV=development     # Options: development, production, test
-APP_ENV=development     # Options: development, production, test
-
-# Server Configuration
-WEB_APP_URL=http://localhost:3000
-API_URL=http://localhost:3001
+LOG_LEVEL=debug
+APP_ENV=development
+NODE_ENV=development
 PORT=3001
 
-# Database Configuration
+# Urls
+WEB_APP_URL=http://localhost:3000
+API_URL=http://localhost:3001
+TRACK_API_URL=https://coldjot.loca.lt
+
+# Database
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/coldjot_dev
 
-# Redis Configuration
+# Redis
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASSWORD=
 
-# Queue Configuration
-QUEUE_PREFIX=coldjot
+# Queue
+QUEUE_PREFIX=coldjot-dev
 
-
-# Google OAuth Configuration
+# Google
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
-GOOGLE_REDIRECT_URI=http://localhost:3001/api/auth/callback/google
+GOOGLE_REDIRECT_URI=
 
-TRACK_URL=https://coldjot.loca.lt
