--- a/apps/web/env/.env.example
+++ b/apps/web/env/.env.example
@@ -1,11 +1,17 @@
-# Development Base Environment Variables
-LOG_LEVEL="debug"
-NODE_ENV="development" 
-USE_SMTP_DUAL_DELIVERY=true
+# General
+LOG_LEVEL=debug
+APP_ENV=development
+NODE_ENV=development
+NEXT_PUBLIC_APP_ENV=development
+AUTH_TRUST_HOST=true
+
+# Urls
+NEXTAUTH_URL=http://localhost:3000
+NEXT_PUBLIC_APP_URL=http://localhost:3000
+QUEUE_API_URL="http://localhost:3001/api"
 
 # Secrets
 NEXTAUTH_SECRET=
-PUBSUB_VERIFICATION_TOKEN=
 APOLLO_API_KEY=
 
 # Database
@@ -15,19 +21,3 @@ DATABASE_URL=postgresql://postgres:postgres@localhost:5432/coldjot_dev
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_REDIRECT_URI=
-
-# NextAuth
-NEXTAUTH_URL=http://localhost:3000
-NEXT_PUBLIC_APP_URL=http://localhost:3000
-NEXT_PUBLIC_APP_ENV=development
-AUTH_TRUST_HOST=true
-QUEUE_API_URL="http://localhost:3001/api"
-
-# URLs
-PUBSUB_AUDIENCE=https://cobra-electric-thoroughly.ngrok-free.app/api/gmail/notifications
-
-# CRON
-CRON_SECRET=
-
-# PubSub
-GMAIL_WATCH_TOPIC=projects/storied-courier-441521-k8/topics/gmail-notification
