--- a/packages/database/env/.env.example
+++ b/packages/database/env/.env.example
@@ -1,13 +1,11 @@
-# Database Configuration
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/coldjot_dev
-
-# Logging Configuration
-LOG_LEVEL=info          # Options: debug, info, warn, error
+# Environment
+NODE_ENV=development   # Options: development, production, test
+APP_ENV=development    # Options: development, production, test
+LOG_LEVEL=info         # Options: debug, info, warn, error
                        # debug - Includes SQL queries in logs
                        # info  - Standard logging
                        # warn  - Only warnings and errors
                        # error - Only errors
 
-# Environment
-NODE_ENV=development    # Options: development, production, test
-APP_ENV=development    # Options: development, production, test
+# Database
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/coldjot_dev
