--- a/turbo-backup.json
+++ b/turbo-backup.json
@@ -19,7 +19,7 @@
         "NEXTAUTH_URL",
         "NEXT_PUBLIC_*",
         "QUEUE_API_URL",
-        "TRACK_URL",
+        "TRACK_API_URL",
         "PUBSUB_*",
         "CRON_SECRET",
         "GMAIL_*"
@@ -65,7 +65,7 @@
                 "NEXTAUTH_URL",
                 "NEXT_PUBLIC_*",
                 "QUEUE_API_URL",
-                "TRACK_URL",
+                "TRACK_API_URL",
                 "PUBSUB_*",
                 "CRON_SECRET",
                 "GMAIL_*"
@@ -87,7 +87,7 @@
                 "NEXTAUTH_URL",
                 "NEXT_PUBLIC_*",
                 "QUEUE_API_URL",
-                "TRACK_URL",
+                "TRACK_API_URL",
                 "PUBSUB_*",
                 "CRON_SECRET",
                 "GMAIL_*"
