--- a/turbo.json
+++ b/turbo.json
@@ -1,34 +1,20 @@
 {
     "$schema": "https://turbo.build/schema.json",
-    "globalDependencies": [
-        ".env*"
-    ],
-    "globalEnv": [
+    "globalDependencies": [],
+    "globalPassThroughEnv": [
+        "LOG_LEVEL",
         "APP_ENV",
-        "NODE_ENV"
+        "NODE_ENV",
+        "DATABASE_URL"
     ],
     "tasks": {
         "dev": {
             "cache": false,
-            "persistent": true,
-            "env": [
-                "APP_ENV"
-            ],
-            "inputs": [
-                ".env.development",
-                ".env.development.local"
-            ]
+            "persistent": true
         },
         "build:dev": {
             "dependsOn": [
                 "^build"
-            ],
-            "env": [
-                "APP_ENV"
-            ],
-            "inputs": [
-                ".env.development",
-                ".env.development.local"
             ],
             "outputs": [
                 "dist/**",
@@ -39,41 +25,18 @@
             "dependsOn": [
                 "^build:prod"
             ],
-            "env": [],
-            "inputs": [
-                "$TURBO_DEFAULT$",
-                "**/.env.*"
-            ],
             "outputs": [
                 "dist/**",
                 ".next/**"
             ]
         },
         "start:dev": {
-            "cache": false,
-            "env": [],
-            "inputs": [
-                "$TURBO_DEFAULT$",
-                "**/.env.*",
-                ".env.development",
-                ".env.development.local"
-            ]
+            "cache": false
         },
         "start:prod": {
-            "cache": false,
-            "env": [],
-            "inputs": [
-                "$TURBO_DEFAULT$",
-                "**/.env.*"
-            ]
+            "cache": false
         },
         "db:deploy": {
-            "cache": false,
-            "env": [
-                "DATABASE_URL"
-            ]
-        },
-        "db:deploy:staging": {
             "cache": false,
             "env": [
                 "DATABASE_URL"
