Refactor database task configurations in turbo.json files
- Removed redundant environment variable settings for DATABASE_URL across various database-related tasks in turbo.json files.
- Streamlined the configuration for tasks such as db:deploy, db:migrate, and db:seed by eliminating unnecessary env arrays, enhancing clarity and maintainability.

These changes contribute to a cleaner and more organized configuration management, improving the overall maintainability of the codebase.

--- a/packages/database/turbo.json
+++ b/packages/database/turbo.json
@@ -9,75 +9,42 @@
             "dependsOn": [
                 "^build",
                 "db:generate"
-            ],
-            "env": [
-                "DATABASE_URL"
             ]
         },
         "build:prod": {
             "dependsOn": [
                 "^build:prod"
-            ],
-            "env": [
-                "DATABASE_URL"
             ]
         },
         "db:generate": {
             "cache": false
         },
         "db:migrate": {
-            "cache": false,
-            "env": [
-                "DATABASE_URL"
-            ]
+            "cache": false
         },
         "db:migrate:create": {
-            "cache": false,
-            "env": [
-                "DATABASE_URL"
-            ]
+            "cache": false
         },
         "db:deploy": {
-            "cache": false,
-            "env": [
-                "DATABASE_URL"
-            ]
+            "cache": false
         },
         "db:push": {
-            "cache": false,
-            "env": [
-                "DATABASE_URL"
-            ]
+            "cache": false
         },
         "db:seed": {
-            "cache": false,
-            "env": [
-                "DATABASE_URL"
-            ]
+            "cache": false
         },
         "db:reset": {
-            "cache": false,
-            "env": [
-                "DATABASE_URL"
-            ]
+            "cache": false
         },
         "db:studio": {
-            "cache": false,
-            "env": [
-                "DATABASE_URL"
-            ]
+            "cache": false
         },
         "db:deploy:prod": {
-            "cache": false,
-            "env": [
-                "DATABASE_URL"
-            ]
+            "cache": false
         },
         "db:seed:prod": {
-            "cache": false,
-            "env": [
-                "DATABASE_URL"
-            ]
+            "cache": false
         }
     }
 }
