Enhance build configurations and task dependencies for improved performance
- Added new production build script in package.json to filter tasks for web, database, and types packages, streamlining the build process.
- Updated turbo.json files to include necessary dependencies for production builds, ensuring that database generation and type builds are executed in the correct order.
- Adjusted caching settings to improve build reliability and performance across applications.

These changes contribute to a more efficient and maintainable build system, enhancing overall development workflows.

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "build": "turbo run build:development && turbo run db:deploy --filter=@coldjot/database",
         "start": "turbo run start:dev",
         "build:prod": "turbo run build:prod && turbo run db:deploy:prod --filter=@coldjot/database",
+        "web#build:prod": "turbo run build:prod --filter=@coldjot/types --filter=@coldjot/database --filter=web",
         "start:prod": "turbo run start:prod",
         "redis:up": "docker-compose up -d redis",
         "redis:down": "docker-compose down",
