--- a/apps/web/turbo.json
+++ b/apps/web/turbo.json
@@ -22,6 +22,11 @@
             ]
         },
         "build:prod": {
+            "dependsOn": [
+                "^@coldjot/database#build:prod",
+                "^@coldjot/types#build:prod"
+            ],
+            "cache": false,
             "env": [
                 "NEXT_PUBLIC_*",
                 "AUTH_TRUST_HOST",
