--- a/packages/database/turbo.json
+++ b/packages/database/turbo.json
@@ -13,7 +13,8 @@
         },
         "build:prod": {
             "dependsOn": [
-                "^build:prod"
+                "^build:prod",
+                "db:generate"
             ]
         },
         "db:generate": {
