--- a/apps/queue/package.json
+++ b/apps/queue/package.json
@@ -36,7 +36,8 @@
         "quoted-printable": "^1.0.1",
         "sinon": "^19.0.2",
         "@bull-board/api": "^6.5.4",
-        "bullmq": "^5.34.5"
+        "bullmq": "^5.34.5",
+        "tsup": "^8.0.1"
     },
     "devDependencies": {
         "@types/bull": "^4.10.0",
@@ -51,10 +52,6 @@
         "jest": "^29.7.0",
         "nodemon": "^3.0.2",
         "rimraf": "^5.0.5",
-        "ts-jest": "^29.1.1",
-        "ts-node": "^10.9.2",
-        "ts-node-dev": "^2.0.0",
-        "tsup": "^8.0.1",
         "tsx": "^4.7.0",
         "typescript": "^5.2.2"
     }
