--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -29,7 +29,8 @@
         "type-check": "tsc --noEmit"
     },
     "dependencies": {
-        "@prisma/client": "^5.7.0"
+        "@prisma/client": "^5.7.0",
+        "tsup": "^8.0.1"
     },
     "devDependencies": {
         "@types/node": "^20.10.4",
@@ -37,7 +38,6 @@
         "dotenv-cli": "^7.3.0",
         "prisma": "^5.7.0",
         "rimraf": "^5.0.5",
-        "tsup": "^8.0.1",
         "typescript": "^5.3.3"
     }
 }
