--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -25,10 +25,12 @@
         "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist",
         "type-check": "tsc --noEmit"
     },
+    "dependencies": {
+        "tsup": "^8.0.1"
+    },
     "devDependencies": {
         "@types/node": "^20.10.0",
         "eslint": "^8.54.0",
-        "tsup": "^8.0.1",
         "typescript": "^5.3.2"
     }
 }
