--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -76,7 +76,9 @@
     "ua-parser-js": "^2.0.0",
     "use-debounce": "^10.0.4",
     "uuid": "^11.0.3",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "jsonwebtoken": "^9.0.2",
+    "jwks-rsa": "^3.1.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
@@ -90,12 +92,8 @@
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "fs-extra": "^11.2.0",
-    "jsonwebtoken": "^9.0.2",
-    "jwks-rsa": "^3.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "ts-node": "^10.9.2",
-    "tsx": "^4.19.2",
     "typescript": "^5.6.3"
   }
 }
