Update package.json and turbo.json files for improved dependency management and build configurations
- Moved "turbo" from devDependencies to dependencies in the root package.json for better production inclusion.
- Added "tsup" as a devDependency in the queue package.json to ensure consistent build tooling.
- Updated task dependencies in queue's turbo.json to include necessary builds for database and types packages, enhancing build order and reliability.
- Introduced "ts-node" and updated "tsx" in the web package.json to support TypeScript execution in development.

These changes enhance the clarity of dependency management and improve the build process across applications.

--- a/apps/queue/turbo.json
+++ b/apps/queue/turbo.json
@@ -16,7 +16,8 @@
             "cache": false,
             "persistent": false,
             "dependsOn": [
-                "^build:prod"
+                "^@coldjot/database#build:prod",
+                "^@coldjot/types#build:prod"
             ],
             "env": [
                 "PORT",
