--- a/apps/queue/package.json
+++ b/apps/queue/package.json
@@ -36,8 +36,7 @@
         "quoted-printable": "^1.0.1",
         "sinon": "^19.0.2",
         "@bull-board/api": "^6.5.4",
-        "bullmq": "^5.34.5",
-        "tsup": "^8.0.1"
+        "bullmq": "^5.34.5"
     },
     "devDependencies": {
         "@types/bull": "^4.10.0",
@@ -52,6 +51,7 @@
         "jest": "^29.7.0",
         "nodemon": "^3.0.2",
         "rimraf": "^5.0.5",
+        "tsup": "^8.0.1",
         "tsx": "^4.7.0",
         "typescript": "^5.2.2"
     }
