--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -94,6 +94,8 @@
     "fs-extra": "^11.2.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.19.2",
     "typescript": "^5.6.3"
   }
 }
