--- a/package.json
+++ b/package.json
@@ -35,13 +35,11 @@
         "apps/*",
         "packages/*"
     ],
-    "dependencies": {
-        "turbo": "^2.3.3"
-    },
     "devDependencies": {
         "dotenv-cli": "^7.4.4",
         "i": "^0.3.7",
         "npm": "^10.9.2",
-        "prettier": "^3.1.0"
+        "prettier": "^3.1.0",
+        "turbo": "^2.3.3"
     }
 }
