Refactor queue application structure and dependencies
- Removed the entire 'queue' application, including its configurations, routes, and services, to streamline the project structure.
- Introduced a new 'mailops' application with updated dependencies in package-lock.json, ensuring proper versioning and compatibility.
- Added 'tsup' as a dependency in the types package to maintain consistent build tooling across the project.
- This restructuring enhances clarity, maintainability, and prepares the codebase for future development efforts.

--- a/apps/mailops/package.json
+++ b/apps/mailops/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@coldjot/queue",
+    "name": "@coldjot/mailops",
     "version": "0.1.0",
     "private": true,
     "type": "module",
