Refactor mailops application and update configurations
- Removed the turbo-backup.json file as it is no longer needed.
- Renamed the package from "@coldjot/mailops" to "mailops" in package.json for clarity.
- Updated production start scripts to utilize PM2 for better process management.
- Changed API_URL references to MAILOPS_API_URL across various files for consistency.
- Updated environment variable examples and configurations to reflect the new MAILOPS_API_URL.
- Enhanced queue client implementations to use the new MAILOPS_API_URL for API interactions.
- Introduced MAILOPS enum in types for better URL management.

These changes streamline the mailops application structure, improve environment variable handling, and enhance process management for production deployments.

--- a/apps/mailops/env/.env.example
+++ b/apps/mailops/env/.env.example
@@ -6,7 +6,7 @@ PORT=3001
 
 # Urls
 WEB_APP_URL=http://localhost:3000
-API_URL=http://localhost:3001
+MAILOPS_API_URL=http://localhost:3001
 TRACK_API_URL=https://coldjot.loca.lt
 
 # Database
@@ -18,7 +18,7 @@ REDIS_PORT=6379
 REDIS_PASSWORD=
 
 # Queue
-QUEUE_PREFIX=coldjot-dev
+QUEUE_PREFIX=coldjot
 
 # Google
 GOOGLE_CLIENT_ID=
