--- a/apps/web/env/.env.example
+++ b/apps/web/env/.env.example
@@ -8,7 +8,7 @@ AUTH_TRUST_HOST=true
 # Urls
 NEXTAUTH_URL=http://localhost:3000
 NEXT_PUBLIC_APP_URL=http://localhost:3000
-QUEUE_API_URL="http://localhost:3001/api"
+NEXT_PUBLIC_MAILOPS_API_URL="http://localhost:3001/api"
 
 # Secrets
 NEXTAUTH_SECRET=
