Enhance mailops configuration and build settings
- Updated ecosystem.config.cjs to include new process management options: treekill, restart_delay, shutdown_with_message, wait_ready, listen_timeout, and force for improved application stability.
- Modified turbo.json to enable caching and persistent settings for production builds, ensuring better performance and reliability during deployment.

These changes improve the configuration and build process for the mailops application, enhancing overall efficiency and stability.

--- a/apps/mailops/turbo.json
+++ b/apps/mailops/turbo.json
@@ -13,7 +13,7 @@
             ]
         },
         "build:prod": {
-            "cache": false,
+            "cache": true,
             "persistent": false,
             "dependsOn": [
                 "^@coldjot/database#build:prod",
@@ -28,13 +28,16 @@
                 "REDIS_*",
                 "GOOGLE_*",
                 "QUEUE_PREFIX"
+            ],
+            "outputs": [
+                "dist/**"
             ]
         },
         "start:prod": {
-            "cache": false,
-            "persistent": false,
+            "cache": true,
+            "persistent": true,
             "dependsOn": [
-                "^build:prod"
+                "build:prod"
             ],
             "env": [
                 "PORT",
