Enhance build configurations and add development scripts across applications
- Updated package.json files to include new "build:dev" scripts for development builds in various packages (mailops, web, database, types).
- Modified turbo.json files to define "build:dev" tasks with appropriate dependencies and caching settings for improved build efficiency.
- Removed unnecessary production deployment commands from package.json to streamline the build process.

These changes improve the development workflow and ensure consistent build configurations across the project.

--- a/apps/mailops/package.json
+++ b/apps/mailops/package.json
@@ -7,6 +7,7 @@
         "dev": "NODE_OPTIONS='--max-old-space-size=4096' tsx watch src/server.ts",
         "build": "NODE_OPTIONS='--max-old-space-size=4096' tsup",
         "start": "node --expose-gc dist/server.js",
+        "build:dev": "tsup",
         "build:prod": "tsup",
         "start:prod": "pm2 start ecosystem.config.cjs --env production",
         "start:prod:daemon": "pm2 start ecosystem.config.cjs --env production",
