--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "export APP_ENV=development && next build",
     "start": "export APP_ENV=development && next start",
+    "build:dev": "export APP_ENV=development && next build",
     "build:prod": "export APP_ENV=production && next build",
     "start:prod": "export APP_ENV=production && next start",
     "lint": "next lint",
