Refactor turbo.json configurations to enhance caching and streamline build processes
- Removed 'persistent' settings from build and start scripts in mailops and database turbo.json files to simplify configurations.
- Updated caching settings to 'true' for build:dev and build:prod tasks in database, types, and web turbo.json files, improving build efficiency.
- These changes optimize the build process and ensure consistent caching behavior across applications.

--- a/apps/web/turbo.json
+++ b/apps/web/turbo.json
@@ -47,7 +47,7 @@
                 "@coldjot/database#build:prod",
                 "@coldjot/types#build:prod"
             ],
-            "cache": false,
+            "cache": true,
             "env": [
                 "NEXT_PUBLIC_*",
                 "AUTH_TRUST_HOST",
