--- a/apps/mailops/package.json
+++ b/apps/mailops/package.json
@@ -9,27 +9,10 @@
         "start": "node --expose-gc dist/server.js",
         "build:dev": "tsup",
         "build:prod": "tsup",
-        "start:prod": "pm2 start ecosystem.config.cjs --env production",
-        "start:prod:daemon": "pm2 start ecosystem.config.cjs --env production",
-        "start:prod:watch": "pm2 start ecosystem.config.cjs --env production --no-daemon",
-        "stop:prod": "pm2 stop ecosystem.config.cjs",
-        "restart:prod": "pm2 restart ecosystem.config.cjs --env production",
-        "reload:prod": "pm2 reload ecosystem.config.cjs --env production",
-        "delete:prod": "pm2 delete ecosystem.config.cjs",
-        "save:prod": "pm2 save",
-        "logs:prod": "pm2 logs",
-        "logs:prod:error": "pm2 logs --err --lines 200",
-        "logs:prod:out": "pm2 logs --out --lines 200",
-        "logs:prod:json": "pm2 logs --json",
-        "logs:prod:format": "pm2 logs --format",
-        "logs:prod:clear": "pm2 flush",
-        "logs:prod:rotate": "pm2 logrotate -u mailops",
-        "monit:prod": "pm2 monit",
-        "status:prod": "pm2 status",
+        "start:prod": "NODE_ENV=production node --expose-gc dist/server.js",
         "dev:debug": "NODE_OPTIONS='--max-old-space-size=4096 --inspect' tsx watch --inspect src/server.ts",
         "lint": "eslint \"src/**/*.ts\"",
         "clean": "rimraf .turbo node_modules dist .tsbuildinfo",
-        "clean:logs": "rimraf logs/*.log",
         "test": "jest",
         "typecheck": "tsc --noEmit",
         "dev-2": "nodemon --watch src -e ts,json --exec \"npm run build && npm run start\"",
@@ -54,8 +37,7 @@
         "quoted-printable": "^1.0.1",
         "sinon": "^19.0.2",
         "@bull-board/api": "^6.5.4",
-        "bullmq": "^5.34.5",
-        "pm2": "^5.3.0"
+        "bullmq": "^5.34.5"
     },
     "devDependencies": {
         "@types/bull": "^4.10.0",
