--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "db:logs": "docker-compose logs -f postgres",
         "db:migrate": "cd packages/database && dotenv -e .env -- npx prisma migrate dev",
         "db:push": "cd packages/database && dotenv -e .env -- npx prisma db push",
-        "db:reset": "cd packages/database && dotenv -e .env -- npx prisma migrate reset,--force",
+        "db:reset": "cd packages/database && dotenv -e .env -- npx prisma migrate reset --force",
         "services:up": "docker-compose up -d",
         "services:down": "docker-compose down",
         "dev:with-services": "npm run services:up && npm run dev",
